@@ -1,0 +1,2 @@
+Add tests for editor newline_and_indent_event method.
+Remove dead code from pyparse find_good_parse_start method.
